- Updated README and Changes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,4 @@
 Revision history for Map-Tube
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
-
+0.01    Sat Jul 05 10:53:11 2014
+        First version, released.
