--- a/README
+++ b/README
@@ -20,13 +20,6 @@ To install this module, run the following commands:
 	make test
 	make install
 
-Alternatively, to install with Module::Build, you can use the following commands:
-
-	perl Build.PL
-	./Build
-	./Build test
-	./Build install
-
 SUPPORT AND DOCUMENTATION
 
 After installing,  you  can  find  documentation for this module with the perldoc
@@ -50,7 +43,7 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2014 Mohammad S Anwar
+Copyright (C) 2010 - 2014 Mohammad S Anwar
 
 This program is free software; you can redistribute it and/or modify it under the
 terms of the the Artistic License (2.0).You may obtain a copy of the full license
