--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Map::Tube
 
+2.28    Tue Dec 02 22:02:00 2014
+        - Added method validate_map_data() to the package Map::Tube, to validate the map data.
+          Post loading map data, it checks if all the nodes are defined and throw error if found
+          any missing.
+        - Removed SIGNATURE file from the distribution.
+
 2.27    Sun Nov 30 11:19:10 2014
         - Refactored code in a big way to be more OO style.
         - Added new package Map::Tube::Table to represent table in the map.
