--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Map::Tube
 
+2.43    Thu Dec 18 12:00:10 2014
+        - Added two new methods get_lines() and get_stations($line) to the package Map::Tube (RT: 100971).
+        - Added new error codes to the package Map::Tube::Error.
+
 2.42    Mon Dec 08 14:48:20 2014
         - Added 'provides' key to the Makefile.PL file.
 
