--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Map::Tube
 
+2.47    Mon Dec 29 20:30:30 2014
+        - Applied request RT: 101190.
+
 2.46    Fri Dec 19 00:47:30 2014
         - Removed redundant code from the methods get_shortest_route() and _get_shortest_route().
         - Minor cosmetics changes to some of the pod documents.
