--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Map::Tube
 
+2.48    Tue Dec 30 13:00:00 2014
+        - Documented public method defined in the package Map::Tube.
+        - Tidied up code in general.
+
 2.47    Mon Dec 29 20:30:30 2014
         - Applied request RT: 101190.
 
