--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Map-Tube
+Map::Tube
 
 The README  is  used  to  introduce the module and provide instructions on how to
 install the module, any machine dependencies it may have (for example C compilers
@@ -43,7 +43,7 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 - 2015 Mohammad S Anwar
+Copyright (C) 2010 - 2016 Mohammad S Anwar
 
 This program is free software; you can redistribute it and/or modify it under the
 terms of the the Artistic License (2.0).You may obtain a copy of the full license
