--- a/README
+++ b/README
@@ -15,10 +15,10 @@ INSTALLATION
 
 To install this module, run the following commands:
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+    perl Makefile.PL
+    make
+    make test
+    make install
 
 SUPPORT AND DOCUMENTATION
 
@@ -29,18 +29,18 @@ command.
 
 You can also look for information at:
 
-    RT, CPAN's request tracker (report bugs here)
-        https://rt.cpan.org/Public/Dist/Display.html?Status=__Active__;Name=Map-Tube
+    BUG Report
+        https://github.com/manwar/Map-Tube/issues
 
     CPAN Ratings
         http://cpanratings.perl.org/d/Map-Tube
 
-    MetaCPAN
-        https://metacpan.org/release/Map-Tube
+    Search MetaCPAN
+        https://metacpan.org/dist/Map-Tube
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 - 2016 Mohammad S Anwar
+Copyright (C) 2010 - 2022 Mohammad S Anwar
 
 This program is free software; you can redistribute it and/or modify it under the
 terms of the the Artistic License (2.0).You may obtain a copy of the full license
