--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Map::Tube
 
+      - Updated pod with the new map Map::Tube::Bielefeld.
+
 3.68  2022-05-19T19:20:00+00:00
       - Removed reference to CPAN search.
       - Removed reference to RT - issues.
